--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,9 +3,9 @@ name: Build Static Site
 on:
   push:
     branches: [ main ]
-    
+
 permissions:
-  contents: write
+  contents: write 
   
 jobs:
   build:
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install dependencies
         run: npm install
+      - name: Build
+        run: npm run build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
